namespace java com.froad.thrift.vo


/**
 * BizInstanceAttrValueVo
 */
struct BizInstanceAttrValueVo {
    1: optional string instanceId,    /** instanceId */
    2: optional string attrId,    /** attrId */
    3: optional string attrName,    /** attrName */
    4: optional string attrValue    /** attrValue */
}
